# blue-wire-backend

./: .gitignore  LICENSE  README.md  blue-wire-backend.cabal  bower.json  example-new-app.json  stack.yaml
api/js/: blue-wire-api.js
app/: Main.hs
bwviewer/: Main.hs
src/: BlueWire.hs  BlueWire.purs  Main.purs
src/BlueWire/: APIGen.hs  Crypto.purs  Database.hs  FRP.purs  Filesystem.purs  Kick.purs  Logic.hs  Servant.hs  Types.hs  Types.purs
src/BlueWire/Database/: OrphanInstances.hs  Query.hs  Schema.hs
src/BlueWire/Database/Opaleye/: Schema.hs
test/: Spec.hs
